# peppermill

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
docs/notes/: v0.1-bus-and-loop.md  v0.2-anthropic-provider.md  v0.3-fsm-and-runner.md
docs/superpowers/plans/: 2026-05-29-v0.1-bus-cli-fake-provider.md  2026-05-30-v0.2-anthropic-provider.md  2026-06-03-v0.3-fsm-and-runner.md  2026-06-04-v0.4-sessions-and-persistence.md
docs/superpowers/specs/: 2026-05-29-peppermill-reimplementation-design.md  2026-05-29-v0.1-step-spec.md  2026-05-30-v0.2-anthropic-provider-design.md  2026-06-03-v0.3-fsm-and-runner-design.md  2026-06-04-v0.4-sessions-and-persistence-design.md
docs/verifications/: v0.1.md  v0.2.md  v0.3.md  v0.4.md
peppermill/: __init__.py  __main__.py
peppermill/agent/: loop.py  runner.py
peppermill/agent/tools/: add.py
peppermill/bus/: events.py  queue.py
peppermill/channels/: cli.py
peppermill/providers/: anthropic.py  base.py  fake.py
peppermill/session/: __init__.py  history.py  manager.py  types.py
scripts/dev/: push_merge.sh
tests/: test_e2e.py
tests/_helpers/: __init__.py  in_memory_session_manager.py  scripted_provider.py  scripted_runner.py
tests/agent/: test_loop.py  test_runner.py
tests/agent/tools/: test_add.py
tests/bus/: test_events.py  test_queue.py
tests/channels/: test_cli.py
tests/providers/: test_anthropic.py  test_base.py  test_fake.py  test_scripted_provider.py
tests/session/: test_history.py  test_manager.py
