[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peppermill"
version = "0.1.0"
description = "PepperMill — a minimal LLM-agent framework, reimplemented for deep understanding."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Gabor Fekete", email = "gabor.fekete85@gmail.com" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
peppermill = "peppermill.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["peppermill"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]